# tensorboard-chainer

./: .gitignore  .travis.yml  README.md  compile.sh  demo.py  demo_embedding.py  demo_graph.py  pyproject.toml  setup.py
examples/: demo.py  demo_embedding.py  demo_graph.py
tb_chainer/: __init__.py  graph.py  name_scope.py  summary.py  utils.py  writer.py
tb_chainer/src/: attr_value.proto  attr_value_pb2.py  event.proto  event_pb2.py  graph.proto  graph_pb2.py  node_def.proto  node_def_pb2.py  resource_handle_pb2.py  summary.proto  summary_pb2.py  tensor.proto  tensor_pb2.py  tensor_shape_pb2.py  types_pb2.py  versions_pb2.py
tensorboard/: __init__.py  embedding.py  graph.py  name_scope.py  summary.py  utils.py  writer.py
tests/: test_test.py
