[tool.poetry]
name = "tensorboard-chainer"
version = "0.4.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
chainer = "^7.4.0"
tensorboard = "^2.2.1"
setuptools = ">=41.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
