[tool.poetry]
name = "tensorboard-chainer"
packages = [
    {include = "tb_chainer"}
]
version = "0.5.2"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6 || ^3.7"
chainer = "*"
tensorboard = "*"
setuptools = "*"
twine = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
